@@ -72,6 +72,7 @@ WHAT IS NEW?
     * "get rect fuzziness", "set rect fuzziness" [Ralph]
     * "textbox line" replaces "string from textbox", fixing the
       broken 'expand' argument and adding 'strip' argument [Ralph]
+    * "get slice text" [Ralph]
 
   * Vikings of Midgard
 
